# onju-v2

./: .gitignore  ARCHITECTURE.md  OPUS_IMPLEMENTATION.md  PIPELINE.md  README.md  TESTING.md  flash.sh  flash_firmware.sh  pyproject.toml  record_from_esp32.py  requirements.txt  run.sh  run_opus_test_with_serial.sh  serial_monitor.py  setup_openclaw.sh  test_client.py  test_mic_receiver.py  test_opus_tts.py  test_qwen3_tts.py  test_speaker.py  test_streaming_tts.py  test_udp_recv.py
m5_echo/: README.md  audio_compression.h  flash.sh  m5_echo.ino  terminal.py  test_audio.py
onjuino/: .gitignore  credentials.h.template  onjuino.ino
pipeline/: README.md  audio.py  config.yaml.example  device.py  main.py  protocol.py  requirements.txt  vad.py
pipeline/conversation/: __init__.py  agentic.py  base.py  conversational.py  local.py  managed.py  stall.py
pipeline/services/: asr.py  asr_server.py  llm.py  tts.py
tests/: test_client.py  test_stall.py  test_stream.py
