[project]
name = "onju-voice"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx",
    "numpy",
    "onnxruntime",
    "openai",
    "opuslib",
    "pydub",
    "PyYAML",
    "scipy",
    "silero-vad",
]

[project.optional-dependencies]
tts-local = ["mlx-audio>=0.3.1"]
mic = ["pyaudio"]
